# parseSTAR

./: .gitignore  .travis.yml  AlexTemplate-ghc  ChemShifts.hs  LICENSE  Makefile  Parser.y  ParserMonad.hs  README.md  ReadAll.hs  STAR.cabal  StringUtil.hs  TODO.txt  TestTokens.hs  Tokens.x  Type.hs  bug.str  doit.sh  parsestar.cabal  problematic.list  redo_errors.sh  shifts.str  smallest.str  test.str  test2.str
Data/: STAR.hs
Data/STAR/: .gitignore  ChemShifts.hs  Coords.hs  Parser.y  Path.hs  ResidueCodes.hs  StringUtil.hs  Tokens.x  Type.hs
Data/STAR/examples/: STAR2CS.hs
alex/: AlexTemplate-ghc  AlexWrapper-posn-bytestring-strict
example/: .gitignore  STAR2Fasta.hs  STAR2Seq.hs
examples/: .gitignore  PrepareAmyloid.hs  STAR2CS.hs
paper/: parseNMR.tex
preSrc/: Tokens.x
test/: .gitignore  MergeCS.hs  MergeCoord.hs  PrintCSTypes.hs  TestChemShifts.hs  TestChemShiftsShared.hs  TestConverter.hs  TestCoords.hs  TestParser.hs  TestParserMonad.hs  TestPath.hs  TestTokens.hs
