name:                parsestar
version:             1.0
synopsis:            NMR-STAR file format parser.
description:         Parser for NMR-STAR data used by BMRB databank repository
                     of biological nuclear magnetic resonance data.
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Michal J. Gajda
maintainer:          mgajda@gwdg.de
build-type:          Simple
cabal-version:       >=1.12

library
  default-language:    Haskell2010
  exposed-modules:     Data.STAR Data.STAR.Type Data.STAR.ChemShifts Data.STAR.Coords Data.STAR.Parser Data.STAR.Path
  other-modules:       Data.STAR.StringUtil Data.STAR.Tokens 
  ghc-options:
  build-depends:       array, base, mtl, binary, bytestring, bytestring-mmap, bytestring-show, bytestring-nums, deepseq, derive
  build-tools:         happy
  --build-tools:         alex, happy

executable  PrintCSTypes
  main-is: test/PrintCSTypes.hs
  build-depends: base, deepseq, binary, bytestring-nums, bytestring, bytestring-mmap, mtl, array, containers
  default-language:    Haskell2010
  other-modules:       Data.STAR.StringUtil Data.STAR.Tokens Data.STAR Data.STAR.Type Data.STAR.ChemShifts Data.STAR.Coords Data.STAR.Parser

executable  MergeCoord
  main-is: test/MergeCoord.hs
  build-depends: base, deepseq, binary, bytestring-nums, bytestring, bytestring-mmap, mtl, array
  default-language:    Haskell2010
  other-modules:       Data.STAR.StringUtil Data.STAR.Tokens Data.STAR Data.STAR.Type Data.STAR.ChemShifts Data.STAR.Coords Data.STAR.Parser

executable TestChemShifts
  main-is: test/MergeCoord.hs
  build-depends: base, deepseq, binary, bytestring-nums, bytestring, bytestring-mmap, mtl, array
  default-language:    Haskell2010
  other-modules:       Data.STAR.StringUtil Data.STAR.Tokens Data.STAR Data.STAR.Type Data.STAR.ChemShifts Data.STAR.Coords Data.STAR.Parser
