name:                parsestar
version:             1.0
synopsis:            NMR-STAR file format parser.
description:         Parser for NMR-STAR data used by BMRB databank repository
                     of biological nuclear magnetic resonance data.
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Michal J. Gajda
maintainer:          mgajda@gwdg.de
build-type:          Simple
cabal-version:       >=1.12
tested-with:         GHC==7.4.1,GHC==7.4.2,GHC==7.6.1

flag old-bytestring
  description: Use old bytestring library before version 0.10 (introduced along with GHC 7.6).
               Disable for GHC 7.6.1.
  default: True

library
  default-language:    Haskell2010
  exposed-modules:     Data.STAR Data.STAR.Type Data.STAR.ChemShifts Data.STAR.Coords Data.STAR.Parser Data.STAR.Path
  other-modules:       Data.STAR.StringUtil Data.STAR.Tokens 
  ghc-options:
  build-depends:       array, base, mtl, binary, bytestring, bytestring-mmap, bytestring-show, bytestring-nums, deepseq, derive, zlib >= 0.5
  build-tools:         happy
  if flag(old-bytestring)
    cpp-options: -DDEFINE_NFDATA_BYTESTRING
    build-depends: bytestring <  0.10
  else
    build-depends: bytestring >= 0.10.0.0
  --build-tools:         alex, happy

executable  PrintCSTypes
  main-is: test/PrintCSTypes.hs
  build-depends: base, deepseq, binary, bytestring-nums, bytestring, bytestring-mmap, mtl, array, containers,  zlib >= 0.5
  default-language:    Haskell2010
  other-modules:       Data.STAR.StringUtil Data.STAR.Tokens Data.STAR Data.STAR.Type Data.STAR.ChemShifts Data.STAR.Coords Data.STAR.Parser
  if flag(old-bytestring)
    cpp-options: -DDEFINE_NFDATA_BYTESTRING
    build-depends: bytestring <  0.10
  else
    build-depends: bytestring >= 0.10.0.0

executable  MergeCoord
  main-is: test/MergeCoord.hs
  build-depends: base, deepseq, binary, bytestring-nums, bytestring, bytestring-mmap, mtl, array,  zlib >= 0.5
  default-language:    Haskell2010
  other-modules:       Data.STAR.StringUtil Data.STAR.Tokens Data.STAR Data.STAR.Type Data.STAR.ChemShifts Data.STAR.Coords Data.STAR.Parser
  if flag(old-bytestring)
    cpp-options: -DDEFINE_NFDATA_BYTESTRING
    build-depends: bytestring <  0.10
  else
    build-depends: bytestring >= 0.10.0.0

executable TestChemShifts
  main-is: test/MergeCoord.hs
  build-depends: base, deepseq, binary, bytestring-nums, bytestring, bytestring-mmap, mtl, array,  zlib >= 0.5
  default-language:    Haskell2010
  other-modules:       Data.STAR.StringUtil Data.STAR.Tokens Data.STAR Data.STAR.Type Data.STAR.ChemShifts Data.STAR.Coords Data.STAR.Parser
  if flag(old-bytestring)
    cpp-options: -DDEFINE_NFDATA_BYTESTRING
    build-depends: bytestring <  0.10
  else
    build-depends: bytestring >= 0.10.0.0
